{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 102,
  "lineage": "1bbd9d10-d3db-a20f-8d9c-60cdf99f0cda",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09df81ec7aeb5a1ce",
            "association_id": "eipassoc-0a9fa13dedca3d76e",
            "domain": "vpc",
            "id": "eipalloc-09df81ec7aeb5a1ce",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0f3044ee5bee5e6c8",
            "private_dns": "ip-10-0-0-171.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.171",
            "public_dns": "ec2-3-0-243-160.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.243.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:internet-gateway/igw-00be2742e2fa10fca",
            "id": "igw-00be2742e2fa10fca",
            "owner_id": "964479626419",
            "tags": {
              "Environment": "dev",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09df81ec7aeb5a1ce",
            "association_id": "eipassoc-0a9fa13dedca3d76e",
            "connectivity_type": "public",
            "id": "nat-08c4106ebaf410522",
            "network_interface_id": "eni-0f3044ee5bee5e6c8",
            "private_ip": "10.0.0.171",
            "public_ip": "3.0.243.160",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0570aea7ef5d31f2c",
            "tags": {
              "Environment": "dev",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0979e56a0253106751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08c4106ebaf410522",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0979e56a025310675",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00be2742e2fa10fca",
            "id": "r-rtb-0b7d3d24d39aac6dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7d3d24d39aac6dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:route-table/rtb-0979e56a025310675",
            "id": "rtb-0979e56a025310675",
            "owner_id": "964479626419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08c4106ebaf410522",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:route-table/rtb-0b7d3d24d39aac6dd",
            "id": "rtb-0b7d3d24d39aac6dd",
            "owner_id": "964479626419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00be2742e2fa10fca",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09af586af3163a928",
            "route_table_id": "rtb-0979e56a025310675",
            "subnet_id": "subnet-07b1643a38e877bc7"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054d380f59cac25c0",
            "route_table_id": "rtb-0979e56a025310675",
            "subnet_id": "subnet-09298fdb19c16ce76"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067e99a2c97b9fa1f",
            "route_table_id": "rtb-0b7d3d24d39aac6dd",
            "subnet_id": "subnet-0570aea7ef5d31f2c"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0260f96332e7ee5e3",
            "route_table_id": "rtb-0b7d3d24d39aac6dd",
            "subnet_id": "subnet-0a7a4c4492aca563a"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:security-group/sg-0d63012df49db3a5a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d63012df49db3a5a",
            "ingress": [],
            "name": "db-20230902152917526700000001",
            "name_prefix": "db-",
            "owner_id": "964479626419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:security-group/sg-00ba35d509499e66a",
            "description": "Allow traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ba35d509499e66a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "World",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "guance-workshop",
            "name_prefix": "",
            "owner_id": "964479626419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "guance-eks-workshop",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "guance-eks-workshop",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:security-group/sg-0d1c6af2cb2412304",
            "description": "Allow remote SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1c6af2cb2412304",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "guancewworkshop-remote-access20230902152917531300000002",
            "name_prefix": "guancewworkshop-remote-access",
            "owner_id": "964479626419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "ssh-remote",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "ssh-remote",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:subnet/subnet-07b1643a38e877bc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b1643a38e877bc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964479626419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-1",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-workshop": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-1",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-workshop": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:subnet/subnet-09298fdb19c16ce76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09298fdb19c16ce76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964479626419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet-2",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-workshop": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet-2",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-workshop": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:subnet/subnet-0570aea7ef5d31f2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0570aea7ef5d31f2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964479626419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-1",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-workshop": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-1",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-workshop": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:subnet/subnet-0a7a4c4492aca563a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7a4c4492aca563a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964479626419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-2",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-workshop": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-2",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-workshop": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:vpc/vpc-00c154a0b76fd9bdd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d737767a3122629",
            "default_route_table_id": "rtb-0d8238e922c535532",
            "default_security_group_id": "sg-0c32421ee7c85e16a",
            "dhcp_options_id": "dopt-bea99cd9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c154a0b76fd9bdd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8238e922c535532",
            "owner_id": "964479626419",
            "tags": {
              "Environment": "dev",
              "Name": "guance-workshop-vpc",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "guance-workshop-vpc",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:security-group/sg-0c0d215bc63942e2e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c0d215bc63942e2e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0066bbaa5df36130f"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "guance-eks-cluster-cluster-20230903100417840500000003",
            "name_prefix": "guance-eks-cluster-cluster-",
            "owner_id": "964479626419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "guance-eks-cluster-cluster",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "guance-eks-cluster-cluster",
              "TagKey": "guance-workshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:964479626419:security-group/sg-0066bbaa5df36130f",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0066bbaa5df36130f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d215bc63942e2e"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d215bc63942e2e"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d215bc63942e2e"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d215bc63942e2e"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d215bc63942e2e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d215bc63942e2e"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "guance-eks-cluster-node-20230903100417840300000002",
            "name_prefix": "guance-eks-cluster-node-",
            "owner_id": "964479626419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "guance-eks-cluster-node",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "guance-eks-cluster-node",
              "TagKey": "guance-workshop",
              "Terraform": "true",
              "kubernetes.io/cluster/guance-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c154a0b76fd9bdd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2527476436",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c0d215bc63942e2e",
            "security_group_rule_id": "sgr-045a7e983cb1b2a0b",
            "self": false,
            "source_security_group_id": "sg-0066bbaa5df36130f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4189238679",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-0525c66c1e0905600",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-946177382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-0c4b6eff741988843",
            "self": false,
            "source_security_group_id": "sg-0c0d215bc63942e2e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2234437390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-0a5246ad47fc461f2",
            "self": false,
            "source_security_group_id": "sg-0c0d215bc63942e2e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1282189464",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-019b56c9134eb44da",
            "self": false,
            "source_security_group_id": "sg-0c0d215bc63942e2e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1597019321",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-098b943d9e6d0f431",
            "self": false,
            "source_security_group_id": "sg-0c0d215bc63942e2e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-999401330",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-0f8f3ca22e6bd57b7",
            "self": false,
            "source_security_group_id": "sg-0c0d215bc63942e2e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-90565866",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-07964e3aab19a7988",
            "self": false,
            "source_security_group_id": "sg-0c0d215bc63942e2e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-109500206",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-000d797a43734daa2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3618367699",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-0f72887bcb7d69c87",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1945389884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0066bbaa5df36130f",
            "security_group_rule_id": "sgr-0e333ad97b331cc33",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}